--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-spring/parallax": "^9.7.2",
     "@react-spring/web": "^9.7.2",
+    "aos": "^2.3.4",
     "framer-motion": "^10.12.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,7 +22,8 @@
     "react-scroll-parallax": "^3.4.2",
     "react-tilt": "^1.0.2",
     "sass": "^1.62.1",
-    "scrollbar-width": "^3.1.1"
+    "scrollbar-width": "^3.1.1",
+    "swiper": "^9.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
