--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.5",
     "@react-spring/parallax": "^9.7.2",
     "@react-spring/web": "^9.7.2",
     "aos": "^2.3.4",
