--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://kivistudio.uz/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -10,18 +11,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.1.4",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.5",
     "@react-spring/parallax": "^9.7.2",
     "@react-spring/web": "^9.7.2",
+    "antd": "^5.6.4",
     "aos": "^2.3.4",
+    "axios": "^1.4.0",
     "framer-motion": "^10.12.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-parallax": "^3.5.1",
     "react-parallax-tilt": "^1.7.142",
     "react-router-dom": "^6.11.2",
+    "react-scroll": "^1.8.9",
     "react-scroll-parallax": "^3.4.2",
     "react-tilt": "^1.0.2",
     "sass": "^1.62.1",
